[housekeeping] Smaller images, docs