@@ -1,8 +1,6 @@
 # API Server
 
-Following the [diagram](https://github.com/bob-cd/bob/issues/70#issuecomment-611661635), this is the service that is responsible for implementing the REST API for Bob.
-
-This is intended as the coherent gateway for the Bob cluster having the schema checks, health checks for all the services and useful overviews like system status and metrics.
+This is the coherent gateway for the Bob cluster having the REST API, schema checks, health checks for all the services and useful overviews like system status and metrics.
 
 ## How does this work
 - This is implemented in Clojure/JVM
@@ -13,23 +11,23 @@ This is intended as the coherent gateway for the Bob cluster having the schema c
 ## Configuration
 [Aero](https://github.com/juxt/aero) is used and therefore several variables can be set by specifying them as environment variables. Possible variables are:
 
-| Environment variables         | defaults                                          |
-|-------------------------------|---------------------------------------------------|
-| BOB_STORAGE_URL               | jdbc:postgresql://localhost:5432/bob              |
-| BOB_STORAGE_USER              | bob                                               |
-| BOB_STORAGE_PASSWORD          | bob                                               |
-| BOB_QUEUE_URL                 | amqp://localhost:5672                             |
-| BOB_QUEUE_USER                | guest                                             |
-| BOB_QUEUE_PASSWORD            | guest                                             |
-| BOB_QUEUE_API_URL             | http://localhost:15672/api                        |
-| BOB_API_HOST                  | 0.0.0.0                                           |
-| BOB_API_PORT                  | 7777                                              |
-| BOB_HEALTH_CHECK_FREQ         | 60000                                             |
-| BOB_CONNECTION_RETRY_ATTEMPTS | 10                                                |
-| BOB_CONNECTION_RETRY_DELAY    | 2000                                              |
-| BOB_STREAM_NAME               | bob.event-stream                                  |
-| BOB_STREAM_URL                | rabbitmq-stream://guest:guest@localhost:5552/%2f" |
-| BOB_STREAM_RETENTION_DAYS     | 7                                                 |
+| Environment variables         | defaults                                         |
+|-------------------------------|--------------------------------------------------|
+| BOB_STORAGE_URL               | jdbc:postgresql://localhost:5432/bob             |
+| BOB_STORAGE_USER              | bob                                              |
+| BOB_STORAGE_PASSWORD          | bob                                              |
+| BOB_QUEUE_URL                 | amqp://localhost:5672                            |
+| BOB_QUEUE_USER                | guest                                            |
+| BOB_QUEUE_PASSWORD            | guest                                            |
+| BOB_QUEUE_API_URL             | http://localhost:15672/api                       |
+| BOB_API_HOST                  | 0.0.0.0                                          |
+| BOB_API_PORT                  | 7777                                             |
+| BOB_HEALTH_CHECK_FREQ         | 60000                                            |
+| BOB_CONNECTION_RETRY_ATTEMPTS | 10                                               |
+| BOB_CONNECTION_RETRY_DELAY    | 2000                                             |
+| BOB_STREAM_NAME               | bob.event-stream                                 |
+| BOB_STREAM_URL                | rabbitmq-stream://guest:guest@localhost:5552/%2f |
+| BOB_STREAM_RETENTION_DAYS     | 7                                                |
 
 ## Building and Running
 
@@ -48,7 +46,7 @@ This is intended as the coherent gateway for the Bob cluster having the schema c
 - Run `docker run --rm -it --name bob-storage -p 5432:5432 -e POSTGRES_DB=bob -e POSTGRES_USER=bob -e POSTGRES_PASSWORD=bob postgres:alpine` to run the latest PostgreSQL instance on port `5432`.
 
 ### Ways of connecting APIServer to the cluster
-- To build an uberjar run `bb compile` to obtain an `apiserver.jar`. Running `java -jar apiserver.jar` should connect to it all nicely.
+- To build an uberjar run `bb compile` to obtain an `apiserver.jar`. Running `java --enable-preview -jar apiserver.jar` should connect to it.
 - To run directly without building a JAR, run `clojure -J--enable-preview -M -m apiserver.main` from this dir.
 
 ## Setting up the dev environment with the REPL
